# config/packages/nelmio_api_doc.yaml
@@ -1,9 +1,57 @@
 nelmio_api_doc:
     documentation:
+        servers:
+            - url: http://localhost:8000/
+              description: API over HTTP
         info:
-            title: My App
-            description: This is an awesome app!
+            title: GreenQuest
+            description: GreenQuest API
             version: 1.0.0
-    areas: # to filter documented areas
+        paths:
+            /api/login:
+                post:
+                    operationId: postCredentialsItem
+                    tags:
+                        - Token
+                    summary: Get the JWT token for logging.
+                    requestBody:
+                        required: true
+                        content:
+                            application/json:
+                                schema:
+                                    type: object
+                                    required:
+                                        - email
+                                        - password
+                                    properties:
+                                        email:
+                                            type: string
+                                            example: "admin@password"
+                                        password:
+                                            type: string
+                                            example: "password"
+                    responses:
+                        "200":
+                            description: Get JWT token
+                            content:
+                                application/json:
+                                    schema:
+                                        type: object
+                                        properties:
+                                            token:
+                                                type: string
+                                                example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+                                            refresh_token:
+                                                type: string
+                                                example: "67abf20ff7833531980b380f08b7e44876857376dd6256d..."
+        components:
+            securitySchemes:
+                Bearer:
+                    type: http
+                    scheme: bearer
+                    bearerFormat: JWT
+        security:
+            - Bearer: []
+    areas:
         path_patterns:
-            - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
+            - ^/api(?!/doc$)
